--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JKHeadley/rest-hapi-demo.git"
+    "url": "git+https://github.com/sudhansurana/rest-hapi-demo.git"
   },
   "keywords": [
     "rest-hapi"
@@ -17,11 +17,11 @@
   "author": "Justin Headley",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/JKHeadley/rest-hapi-demo/issues"
+    "url": "https://github.com/sudhansurana/rest-hapi-demo/issues"
   },
-  "homepage": "https://github.com/JKHeadley/rest-hapi-demo#readme",
+  "homepage": "https://github.com/sudhansurana/rest-hapi-demo#readme",
   "dependencies": {
-    "bcryptjs": "^2.4.0",
-    "rest-hapi": "latest"
+    "bcryptjs": "^2.4.3",
+    "rest-hapi": "https://github.com/sudhansurana/rest-hapi"
   }
 }
